# hs2df

./: .project  GHCCore.cabal
.dist-buildwrapper/: GHCCore.cabal
.dist-buildwrapper/src/: .B.hs.bwinfo  .Main.hs.bwinfo  B.exe.manifest  B.hi  B.hs  CoreTranslator.hs  Test.hs
SourceGraph/: GHCCore.html
SourceGraph/graphs/: A.dot  A_levels.dot  Test.dot  Test_levels.dot  code.dot  codeCW.dot  codeCluster.dot  code_levels.dot  imports.dot
src/: B.hs  CoreGraph.hs  Main.hs  Options.hs  Test.hi  Tools.hs
src/Backend/: Graphviz.hs  OpenCL.hs
src/Backend/Common/: Tools.hs  Types.hs
src/Backend/OpenCL/: Function.hs  Host.hs  If.hs  Kernel.hs  Literal.hs  Matching.hs  OpenCL.hs  Param.hs  Tools.hs  Types.hs
src/Backend/OpenCL/BuiltIn/: Functions.hs  Types.hs
src/Backend/VHDL/: Function.hs  If.hs  Literal.hs  Param.hs  Tools.hs  TopEntity.hs  Types.hs  VHDL.hs
src/Backend/VHDL/BuiltIn/: Functions.hs  Types.hs
src/Core/: CoreGraph.hs  CoreTools.hs  CoreTree.hs  CoreTypes.hs
src/Graph/: Tools.hs  Types.hs
