name:           GHCCore
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable GHCCore
  build-depends:   
                   base >= 4,
                   ghc,
                   ghc-paths,
                   bytestring,
                   binary,
                   mtl,
                   vhdl,
                   VHDLGen,
                   containers,
                   dlist,
                   fgl,
                   ghc-prim,
                   integer-gmp,
                   Graphalyze
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  other-modules:   
                   B,
                   Backend.Graphviz,
                   Core.CoreGraph

