name:           GHCCore
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable GHCCore
  build-depends:   
                   base >= 4,
                   ghc,
                   ghc-paths,
                   bytestring,
                   binary,
                   mtl,
                   vhdl,
                   VHDLGen,
                   containers,
                   dlist,
                   fgl,
                   ghc-prim,
                   integer-gmp,
                   Graphalyze,
                   directory
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  other-modules:   
                   B,
                   Backend.Graphviz,
                   Core.CoreGraph,
                   Backend.VHDL.Literal,
                   Backend.VHDL.Function,
                   Backend.VHDL.TopEntity,
                   Backend.VHDL.Types,
                   Backend.VHDL.Tools,
                   Backend.VHDL.Param,
                   Backend.VHDL.If,
                   Tools,
                   Backend.OpenCL.OpenCL,
                   Backend.OpenCL.Kernel,
                   Backend.OpenCL.Host,
                   Backend.OpenCL.Matching,
                   Options,
                   Core.CoreTypes,
                   Backend.Common.Tools

